# DynamicalSystemFramework

./: .gitignore  .zenodo.json  CITATION.cff  CMakeLists.txt  Doxyfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: benchmark.yml  benchmark_release.yml  binding.yml  clang_format.yml  cmake_debug.yml  cmake_examples.yml  cmake_install.yml  cmake_install_macos.yml  cmake_test.yml  cmake_test_macos.yml  cmake_tests.yml  codacy.yml  codeql.yml  flawfinder.yml  gh-pages.yml  profile_exec_time.yml  profile_mem_usage.yml  profiling.yml  pylint.yml  pypi.yml  pytest.yml  ruff.yml  zenodo.yml
benchmark/: Bench_Agent.cpp  Bench_Dynamics.cpp  Bench_Intersection.cpp  Bench_Network.cpp  Bench_Roundabout.cpp  Bench_Street.cpp  Bench_TrafficLight.cpp  CMakeLists.txt
benchmark/Adj/: BenchAdj.cpp  CMakeLists.txt
benchmark/Dynamics/: BenchDynamics.cpp  CMakeLists.txt
benchmark/Graph/: BenchGraph.cpp  CMakeLists.txt
benchmark/Street/: BenchStreet.cpp  CMakeLists.txt
docs/: AdjacencyMatrix_8hpp.html  AdjacencyMatrix_8hpp.js  Agent_8hpp.html  Agent_8hpp.js  Dynamics_8hpp.html  Dynamics_8hpp.js  Graph_8hpp.html  Intersection_8hpp.html  Intersection_8hpp.js  Itinerary_8hpp.html  Itinerary_8hpp.js  Node_8hpp.html  Node_8hpp.js  RoadDynamics_8hpp.html  RoadDynamics_8hpp.js  RoadNetwork_8hpp.html  RoadNetwork_8hpp.js  Roundabout_8hpp.html  Roundabout_8hpp.js  Sensors_8hpp.html  Sensors_8hpp.js  SparseMatrix_8hpp.html  Station_8hpp.html  Station_8hpp.js  Street_8hpp.html  Street_8hpp.js  TrafficLight_8hpp.html  TrafficLight_8hpp.js  annotated.html  annotated_dup.js  classdsf_1_1AdjacencyMatrix-members.html  classdsf_1_1AdjacencyMatrix.html  classdsf_1_1AdjacencyMatrix.js  classdsf_1_1Agent-members.html  classdsf_1_1Agent.html  classdsf_1_1Agent.js  classdsf_1_1AgentComparator-members.html  classdsf_1_1AgentComparator.html  classdsf_1_1Counter-members.html  classdsf_1_1Counter.html  (+387 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  files_0.js  files_4.js  files_5.js  functions_0.js  functions_1.js  (+29 more)
examples/: CMakeLists.txt  Makefile  README.md  modena.py  requirements.txt  simulate_city.py  simulate_grid.py  slow_charge_rb.cpp  slow_charge_tl.cpp  stalingrado.cpp  stalingrado_notl.cpp  stalingrado_tl.cpp
profiling/: CMakeLists.txt  main.cpp
src/dsf/: __init__.py  binding.cpp  binding_mobility.cpp  bindings.cpp  dsf.hpp
src/dsf/base/: Dynamics.hpp  Edge.hpp  Network.hpp  Node.hpp
src/dsf/cartography/: __init__.py  cartography.py
src/dsf/geometry/: Point.cpp  Point.hpp  PolyLine.cpp  PolyLine.hpp
src/dsf/headers/: AdjacencyMatrix.hpp  Agent.hpp  DijkstraWeights.hpp  Dynamics.hpp  Edge.hpp  FirstOrderDynamics.hpp  Geometry.hpp  Intersection.hpp  Itinerary.hpp  Network.hpp  Node.hpp  Road.hpp  RoadDynamics.hpp  RoadJunction.hpp  RoadNetwork.hpp  Roundabout.hpp  SparseMatrix.hpp  Station.hpp  Street.hpp  TrafficLight.hpp
src/dsf/mdt/: PointsCluster.cpp  PointsCluster.hpp  Trajectory.cpp  Trajectory.hpp  TrajectoryCollection.cpp  TrajectoryCollection.hpp
src/dsf/mobility/: Agent.cpp  Agent.hpp  AgentDynamics.hpp  FirstOrderDynamics.cpp  FirstOrderDynamics.hpp  Intersection.cpp  Intersection.hpp  Itinerary.cpp  Itinerary.hpp  MarkovianDynamics.hpp  MarkovianRoad.cpp  MarkovianRoad.hpp  MarkovianRoadNetwork.hpp  Road.cpp  Road.hpp  RoadDynamics.hpp  RoadJunction.cpp  RoadJunction.hpp  RoadNetwork.cpp  RoadNetwork.hpp  Roundabout.cpp  Roundabout.hpp  Sensors.cpp  Station.cpp  Station.hpp  Street.cpp  Street.hpp  TrafficLight.cpp  TrafficLight.hpp  binding.cpp
src/dsf/python/: cartography.py
src/dsf/sources/: AdjacencyMatrix.cpp  Agent.cpp  DijkstraWeights.cpp  Edge.cpp  FirstOrderDynamics.cpp  Geometry.cpp  Intersection.cpp  Itinerary.cpp  Road.cpp  RoadJunction.cpp  RoadNetwork.cpp  Roundabout.cpp  Station.cpp  Street.cpp  TrafficLight.cpp
src/dsf/tsm/: __init__.py  tsm.py
src/dsf/utility/: DijkstraResult.hpp  Logger.cpp  Logger.hpp  Measurement.hpp  Typedef.hpp  queue.hpp
src/dsm/: binding.cpp  dsm.hpp
src/dsm/headers/: AdjacencyMatrix.hpp  Agent.hpp  DijkstraWeights.hpp  Dynamics.hpp  Edge.cpp  Edge.hpp  FirstOrderDynamics.cpp  FirstOrderDynamics.hpp  Graph.cpp  Graph.hpp  Intersection.cpp  Intersection.hpp  Itinerary.cpp  Itinerary.hpp  Network.hpp  Node.hpp  Road.cpp  Road.hpp  RoadDynamics.hpp  RoadJunction.hpp  RoadNetwork.hpp  Roundabout.cpp  Roundabout.hpp  Sensors.cpp  Sensors.hpp  SparseMatrix.hpp  Station.hpp  StochasticRoad.cpp  StochasticRoad.hpp  StochasticStreet.hpp  Street.cpp  Street.hpp  TrafficLight.cpp  TrafficLight.hpp
src/dsm/sources/: AdjacencyMatrix.cpp  Agent.cpp  DijkstraWeights.cpp  Edge.cpp  FirstOrderDynamics.cpp  (+11 more)
test/: CMakeLists.txt  Test_AdjacencyMatrix.cpp  Test_SparseMatrix.cpp  Test_agent.cpp  Test_cartography.py  Test_dynamics.cpp  Test_geometry.cpp  Test_graph.cpp  Test_is_node.cpp  Test_is_numeric.cpp  Test_is_street.cpp  Test_itinerary.cpp  Test_node.cpp  Test_sparsematrix.cpp  Test_street.cpp
test/base/: Test_AdjacencyMatrix.cpp  Test_SparseMatrix.cpp  Test_is_node.cpp  Test_is_numeric.cpp  Test_is_street.cpp  Test_node.cpp
test/data/: coords.dsm  edges.csv  forlì_edges.csv  forlì_nodes.csv  manhattan_edges.csv  manhattan_nodes.csv  matrix.dsf  nodes.csv  postua_edges.csv  postua_edges.geojson  postua_nodes.csv  sparse_matrix.dsf  sparsematrix.csv  temp.dsf  test_transition_probs.geojson
test/geometry/: Test_Point.cpp  Test_PolyLine.cpp
test/mdt/: Test_PointsCluster.cpp  Test_Trajectory.cpp  Test_TrajectoryCollection.cpp
test/mobility/: Test_agent.cpp  Test_dynamics.cpp  Test_graph.cpp  Test_itinerary.cpp  Test_street.cpp
utils/: get_osm_data.py  plotter.py
webapp/: config.json  index.html  script.js  styles.css
(+7 files in other folders)
